syntax = "proto3";

package api.Admin.v1;

option go_package = "fkratos/api/admin/v1;v1";
option java_multiple_files = true;
option java_package = "api.admin.v1";

// 变量的命名一律使用小驼峰命名法，例如：firstName、lastName等。
// 后缀定义:请求req,响应reply


// 用户服务
service Admin {
	//创建用户
	rpc CreateAdmin (CreateAdminReq) returns (CreateAdminReply);
	//更新用户
	rpc UpdateAdmin (UpdateAdminReq) returns (UpdateAdminReply);
	//删除用户
	rpc DeleteAdmin (DeleteAdminReq) returns (DeleteAdminReply);
	//获取单个用户
	rpc GetAdmin (GetAdminReq) returns (GetAdminReply);
	//获取用户列表
	rpc ListAdmin (ListAdminReq) returns (ListAdminReply);
}
//请求-创建用户
message CreateAdminReq {}
//响应-创建用户
message CreateAdminReply {}
//请求-更新用户
message UpdateAdminReq {}
//响应-更新用户
message UpdateAdminReply {}
//请求-删除用户
message DeleteAdminReq {}
//响应-删除用户
message DeleteAdminReply {}
//请求-获取单个用户
message GetAdminReq {}
//响应-获取单个用户
message GetAdminReply {}
//请求-获取用户列表
message ListAdminReq {}
//响应-获取用户列表
message ListAdminReply {}